# mclog

./: .gitignore  Cargo.toml  readme.md
mclog/: pack.mcmeta
mclog/data/log/dimension/: log.json
mclog/data/log/function/: debug.mcfunction  error.mcfunction  info.mcfunction  trace.mcfunction  warn.mcfunction
mclog/data/log/function/zzz/: default.mcfunction  dimension_check.mcfunction  gather.mcfunction  get_type.mcfunction  load.mcfunction  place.mcfunction  raw.mcfunction  set_aoe.mcfunction  store_current.mcfunction
mclog/data/log/tags/function/: debug.json  error.json  info.json  trace.json  warn.json
mclog/data/minecraft/tags/function/: load.json
mclog_capture/: Cargo.toml
mclog_capture/src/: data.rs  error.rs  lib.rs
mclog_capture/tests/: capture.rs
