[package]
name = "mclog_capture"
version = "0.1.0"
edition = "2024"

[dependencies]
owo-colors = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vanity_nbt = { version = "0.1.0", features = ["serde"] }
uuid = { version = "1.23", features = ["serde"] }

[dev-dependencies]
dotenvy = "0.15"
